Fixed search selection on mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,3 +5,11 @@
 .container {
   height: 100%;
 }
+
+.search-icon{
+  cursor: pointer;
+}
+
+.nav-link{
+  color: black;
+}
