--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,13 +19,10 @@ $theme-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$light-theme: mat.define-light-theme((
-  color: (
-    primary: $theme-primary,
-    accent: $theme-accent,
-    warn: $theme-warn,
-  )
-));
+$light-theme: mat.define-light-theme((color: (primary: $theme-primary,
+        accent: $theme-accent,
+        warn: $theme-warn,
+      )));
 
 
 // Include theme styles for core and each component used in your app.
@@ -35,29 +31,35 @@ $light-theme: mat.define-light-theme((
 @include mat.all-component-themes($light-theme);
 
 //Dark theme
-$dark-theme: mat.define-dark-theme((
- color: (
-  primary: $theme-primary,
-  accent: $theme-accent,
-  warn: $theme-warn,
- ),
-  typography: mat.define-typography-config(),
-  density: 0,
-));
+$dark-theme: mat.define-dark-theme((color: (primary: $theme-primary,
+        accent: $theme-accent,
+        warn: $theme-warn,
+      ),
+      typography: mat.define-typography-config(),
+      density: 0,
+    ));
 
-.dark-side{
-  @include mat.all-component-themes($dark-theme);
+.dark-side {
+  @include mat.all-component-colors($dark-theme);
 }
 
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 $success-color: green;
 $error-color: red;
 $white-color: white;
+$black-color: black;
 
 
 .snackbar-success {
@@ -99,3 +101,13 @@ mat-toolbar {
   height: 50px !important;
 }
 
+.link {
+  display: block;
+  padding: 0.5rem 1rem;
+  color: $black-color;
+  text-decoration: none;
+
+  &:hover {
+    color: $black-color;
+  }
+}
